# COMPASS

./: .gitignore  Manifest.toml  Project.toml  README.md  _quarto.yml  environment.yml  index.qmd  pyproject.toml  references.bib  styles.css
.github/workflows/: render-book.yml  test-examples.yml
chapters/01-introduction/: 02-optimisation.qmd  03-computer-implementation.qmd  index.qmd
chapters/01-primer/: 01-what-is-energy-system-modelling.qmd  03-linear-programming.qmd  04-mixed-integer-programming.qmd  05-code-conventions.qmd  index.qmd
chapters/02-economic-dispatch/: 03-example-in-python.qmd  04-example-in-julia.qmd  index-examples-in-julia.qmd  index-examples-in-python.qmd  index.qmd
chapters/02-economic-dispatch-old/: 04-example-in-julia.qmd
chapters/03-economic-dispatch/: index.qmd
chapters/03-unit-commitment/: 02-formulation.html  02-formulation.qmd  index.qmd
chapters/04-multi-node-models/: index.qmd
chapters/04-stochastic-optimisation/: 01-description.qmd  02-formulation.qmd  index.qmd
chapters/04-unit-commitment/: index.qmd
chapters/05-hydrothermal-scheduling/: index.qmd
chapters/07-decomposition-methods/: 01-benders.qmd  03-column-generation.qmd  04-branch-and-price.qmd  index.qmd
chapters/07-stochastic-optimisation/: index.qmd
chapters/08-decomposition-methods/: 02-lagrangian-relaxation.qmd  index.qmd
chapters/08-network-constrained/: 02-transport-formulation.qmd  03-dc-power-flow.qmd  04-example-in-python.qmd  index.qmd
chapters/08-transmission-expansion-planning/: index.qmd
chapters/10-advanced-topics/: 02-rolling-horizon.qmd  (+2 more)
(+21 files in other folders)
